--- a/españa.html
+++ b/españa.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tienda Online</title>
 </head>
+<style>
+    .cabecera{
+    background-image: url("./img/header.jpg");
+    background-size: cover;
+    text-align: center;
+    padding: 100px;
+    display: flex;
+    flex-direction: column;
+</style>
+
 <body>
+    <div class="cabecera">
+<h1></h1>
+<p>Diseño y desarollo web</p>
+</div>
+<div class="Titulo2">
+    <p>Proyectos</p>
+</div>
+<div class="Columnas">
     
+</div>
 </body>
+
 </html>
