--- a/españa.html
+++ b/españa.html
@@ -8,18 +8,25 @@
 </head>
 <style>
     .cabecera{
-    background-image: url("./img/header.jpg");
+    background-image: url(./img/Foto\ principal.jpg);
     background-size: cover;
     text-align: center;
     padding: 100px;
     display: flex;
     flex-direction: column;
+    }
+    .Titulo2{
+        text-align: center;
+    }
+    .Columnas{
+        
+    }
 </style>
 
 <body>
     <div class="cabecera">
-<h1></h1>
-<p>Diseño y desarollo web</p>
+<h1>GameStart</h1>
+<p>Tienda de Videojuegos</p>
 </div>
 <div class="Titulo2">
     <p>Proyectos</p>
